2000-10-05  Dave Love  <fx@gnu.org>

	* rfc2047.el (rfc2047-fold-region): Use gnus-point-at-bol.
	(rfc2047-charset-encoding-alist): Add iso-8859-1[45].

	* binhex.el: Use defalias, not fset.

	* rfc1843.el: Require cl when compiling.

2000-10-05 12:25:08  ShengHuo ZHU  <zsh@cs.rochester.edu>

	* gnus-agent.el (gnus-agent-fetch-group-1): Score-param could be nil.

2000-10-05 11:43:25  ShengHuo ZHU  <zsh@cs.rochester.edu>

	* rfc2047.el (rfc2047-encode-region): Merge only if regions are
	adjacent.

2000-10-05 09:41:33  ShengHuo ZHU  <zsh@cs.rochester.edu>

	* mm-util.el (mm-multibyte-p): In XEmacs, it is (feature 'mule).
	(mm-find-charset-region): Merge conditions, delete ascii.
	(mm-charset-after): Rewrite.
	* mm-bodies.el (mm-encode-body): Use it.

2000-10-05 09:04:32  ShengHuo ZHU  <zsh@cs.rochester.edu>

	* webmail.el (webmail-hotmail-list): Fix.

2000-10-05  Stefan Monnier <monnier+gnu/emacs@rum.cs.yale.edu>

	* nnimap.el (require): cl.

2000-10-04 15:24:46  ShengHuo ZHU  <zsh@cs.rochester.edu>

	* gnus-art.el (gnus-article-prepare): Configure windows before
	gnus-article-prepare-display is called.  Otherwise, BBDB's popup
	window might be overrided.

2000-10-04  Dave Love  <fx@gnu.org>

	* gnus-ems.el (gnus-article-display-xface)
	[gnus-article-compface-xbm]: Fix.
	(gnus-x-splash): Bind width, height.

2000-10-04 11:45:04  ShengHuo ZHU  <zsh@cs.rochester.edu>

	* gnus-art.el (gnus-mime-inline-part): Use prefix argument only
	when it is called interactively.

2000-10-03 21:20:31  ShengHuo ZHU  <zsh@cs.rochester.edu>

	* gnus-art.el (gnus-mime-action-alist): New variable.
	(gnus-mime-action-on-part): Use it.
	(gnus-mime-button-commands): Add command ".".

2000-10-03 20:37:42  ShengHuo ZHU  <zsh@cs.rochester.edu>

	* gnus-art.el (gnus-mime-inline-part): Support prefix argument.

2000-10-03  Katsumi Yamaoka <yamaoka@jpl.org>

	* lpath.el: "." is in the load-path because dgnushack.el.

2000-10-03  Bjorn Torkelsson  <torkel@hpc2n.umu.se>
