@@ -1,3 +1,12 @@
+2000-10-06 08:56:33  ShengHuo ZHU  <zsh@cs.rochester.edu>
+
+	* webmail.el (webmail-type-definition): Fix my-deja open url.
+
+2000-10-06 Emerick Rogul <emerick@csa.bu.edu>
+
+	* message.el (message-setup-fill-variables): New variable.
+	(message-mode): Use it.
+
 2000-10-05  Dave Love  <fx@gnu.org>
 
 	* rfc2047.el (rfc2047-fold-region): Use gnus-point-at-bol.
